a note on sbt settings